<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SoporteIt</string>
    <string name="to_filter">Filtrar...</string>
    <string name="name">Nombre Completo</string>
    <string name="group_name">Nombre del grupo</string>
    <string name="mail">Email</string>
    <string name="password">Contraseña</string>
    <string name="retype_password">Repetir Contraseña</string>
    <string name="register">Registrarse</string>
    <string name="logIn">Acceder</string>
    <string name="registration">Darse de alta</string>
    <string name="log_in">Acceso</string>
    <string name="preference_file">es.samiralkalii.myapps.soporteit.preferencias</string>
    <string name="holiday_days_per_year">¿Cuántos dias de vacaciones?</string>
    <string name="prompt_member_mail">Indicar el mail del miembro</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">Camera</string>
    <string name="gallery">Galería</string>
    <string name="delete">Eliminar</string>
    <string name="select_image">Seleccionar una imagen</string>
    <string name="read_permission_indication">Es necesario otorgar el permiso ... para poder seleccionar una imagen</string>

    <string name="name_incorrect_message_error">El nombre debe tener al menos 4 caracteres</string>
    <string name="email_incorrect_message_error">Email incorrecto</string>
    <string name="user_not_exist_message_error">No existe el usuario</string>
    <string name="password_incorrect_logup_message_error">La contraseña debe tener al menos 6 caracteres</string>
    <string name="passwords_not_equals_logup_message_error">Las contraseñas deben coincidir</string>
    <string name="password_incorrect_login_message_error">La contraseña es incorrecta</string>
    <string name="area_incorrect">Hay que especificar el area</string>
    <string name="department_incorrect">Hay que especificar el departamento</string>
    <string name="user_collision">Ya existe este usuario!!!</string>
    <string name="no_internet_connection">Error de conexion, comprueba el acceso a Internet</string>
    <string name="boss_already_exist_department_manager">Ya existe el coordinador de \'%1$s\' en el area \'%2$s\'</string>
    <string name="boss_already_exist_area_manager">Ya existe el coordinador del area \'%1$s\'</string>
    <string name="boss_already_exist_director">Ya existe el director de IT</string>
    <string name="not_controled_error">Error no controlado</string>
    <string name="team_already_exist">No se puede crear el equipo porque ya existe</string>
    <string name="already_logged_up">Si ya estas registrado, haz click</string>
    <string name="wait_for_data">Espere...</string>
    <string name="firebase_api_no_available">No tienes instalado el api de google</string>
    <string name="value_mandatory">El valor es obligatorio</string>
    <string name="user_not_exist">El usuario no existe</string>
    <string name="no_account">Si no tienes cuenta, registrate</string>
    <string name="her">Aqui</string>
    <string name="instructions_to_validate_your_email">Es necesario validar tu email, revisa tu correo y siga las instrucciones.</string>
    <string name="app_title_need_mail_validation">Es necesario validar tu email</string>
    <string name="profile">Perfil</string>
    <string name="new_group">Nuevo grupo</string>
    <string name="schedulers">Planificadores</string>
    <string name="home_title">Mi equipo</string>
    <string name="team_created_title">Equipo: %1$s</string>
    <string name="team_no_created_title">Equipo: Pendiente de crear</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="notifications_title">Notificaciones</string>
    <string name="absences">Ausencias</string>
    <string name="notifications">Notificaciones</string>
    <string name="holidays">Vacaciones</string>
    <string name="save">Guardar</string>
    <string name="is_boss">¿Eres Coordinador?</string>
    <string name="general_notif_channel_name">Notificaciones generales</string>
    <string name="general_notif_channel_id">es.samiralkalii.myapps.soporteit_notif_generales_id</string>
    <string name="profile_mandatory">El perfil es obligatorio</string>
    <string name="boss_label">(Big Boss)</string>
    <string name="home">Inicio</string>
    <string name="menu_delete_group">Eliminar grupo</string>
    <string name="menu_delete_user">Eliminar usuario</string>
    <string name="menu_update_group">Modificar grupo</string>
    <string name="nothing"></string>
    <string name="team_name_input">Indica el nombre del equipo</string>
    <string name="wait_while_loading_data">Espere mientras cargamos los datos</string>
    <string name="notif_title_boss_verification">Verification Jefe de Equipo</string>
    <string name="notif_body_boss_verification_ok">Hemos verificado que eres responsable de equipo \uD83D\uDE42\uD83D\uDE42\uD83D\uDE42</string>
    <string name="notif_body_boss_verification_ko">No hemos podido verificar que eres responsable de Equipo \uD83D\uDE1F\uD83D\uDE1F\uD83D\uDE1F</string>
    <string name="notif_body_member_confirmation_ok">El responsable del departamento \'%1$s\' te ha confirmado</string>
    <string name="notif_body_member_confirmation_ko">El responsable del departamento \'%1$s\' te ha rechazado</string>
    <string name="notif_body_new_member">Se ha dado de alta este nuevo miembro \'%1$s\' para ser confirmado</string>
    <string name="notif_title_invitation_to_be_part_of_team">Has recibido una invitación</string>
    <string name="notif_body_invitation_to_be_part_of_team">El responsable de equipo &lt;b>%1$s \'%2$s\'&lt;/b> te ha invitado para formar parte de su equipo &lt;b>%3$s</string>
    <string name="notif_reply_label_deny_invitation">Rechazar</string>
    <string name="notif_received">Recibidas</string>
    <string name="notif_sent">Enviadas</string>
    <string name="notif_type_invitation_to_team">Invitación para formar parte del equipo</string>
    <string name="boss_profil">Responsable de equipo</string>
    <string name="java_profil">Perfil Java</string>
    <string name="cobol_profil">Perfil Cobol</string>
    <string name="csf_profil">Perfil Csf</string>
    <string name="work_address">Tres Cantos, Madrid</string>
    <string name="boss_verification_title">Verificacion Perfil</string>
    <string name="member_verification_title">Confirmation miembro</string>
    <string name="new_member_title">Nuevo usuario</string>
    <string name="boss_verification_msg">Recibiras una notificacion una vez verificado tu perfil de \'responsable de equipo\'</string>
    <string name="member_verification_title_msg">Confirmar o rechazar este miembro \'%1$s\'</string>
    <string name="agree">De acuerdo</string>
    <string name="confirm">Confirmar</string>
    <string name="deny">Rechazar</string>
    <string name="confirm_deny_member_message">¿Estas seguro que quieres rechazar a este usuario?</string>
    <string name="confirm_group_deletion">¿Estas seguro que quieres borrar el grupo \'%1$s\'?</string>
    <string name="confirm_users_deletion">¿Estas seguro que quieres realizar esta operacion de borrado?</string>
    <string name="confirm_operacion">Confirmar la operacion</string>
    <string name="profile_is_needed">Es importante que informes tu perfil</string>
    <string name="advertisement">Aviso</string>
    <string name="create_team">Crear equipo</string>
    <string name="invite">Invitar</string>
    <string name="create_group">Crear grupo</string>
    <string name="update_group">Modificar grupo</string>
    <string name="group_already_exist">Ya existe el grupo</string>
    <string name="add">Añadir</string>
    <string name="verified">Verificado perfil \'responsable de equipo\'  &#9996;</string>
    <string name="verification_pending">Verificacíon pendiente  &#129306;</string>
    <string name="membership_confirmed">El responsable de equipo te ha confirmado &#9996;</string>
    <string name="membership_not_confirmed_yet">Sin confirmar todavia  &#129306;</string>
    <string name="profile_not_confirmed_yet">Perfil sin confirmar</string>
    <string name="create_new_team">Dar de alta el equipo</string>
    <string name="invite_new_member">Invitar a un miembro</string>
    <string name="done">Terminar</string>
    <string name="internal">Interno</string>
    <string name="external">Externo</string>
    <string name="choose_area">Eligir el Area</string>
    <string name="choose_department">Eligir el Departamento</string>
    <string name="choose_profile">Eligir el Perfil</string>


    <string-array name="profile_array">
        <item>@string/boss_profil</item>
        <item>@string/java_profil</item>
        <item>@string/cobol_profil</item>
        <item>@string/csf_profil</item>
        <item>@string/choose_profile</item>
    </string-array>

    <string-array name="profile_members_array">
        <item>@string/java_profil</item>
        <item>@string/cobol_profil</item>
        <item>@string/csf_profil</item>
        <item>@string/choose_profile</item>
    </string-array>

    <string-array name="holiday_days">
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

</resources>
