<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="es.samiralkalii.myapps.soporteit.ui.home.home.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="isEmailValidated"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/notificationsFragment"
        android:name="es.samiralkalii.myapps.soporteit.ui.home.notificactions.pager.NotificationsFragment"
        android:label="@string/notifications_title" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="es.samiralkalii.myapps.soporteit.ui.home.profile.ProfileFragment"
        android:label="@string/profile" >
        <action
            android:id="@+id/action_profileFragment_to_pickUpProfilePhotoBottonSheetDialog"
            app:destination="@id/pickUpProfilePhotoBottonSheetDialog" />
    </fragment>
    <fragment
        android:id="@+id/schedulersFragment"
        android:name="es.samiralkalii.myapps.soporteit.ui.home.schedulers.SchedulersFragment"
        android:label="@string/schedulers" />
    <fragment
        android:id="@+id/holidaysFragment"
        android:name="es.samiralkalii.myapps.soporteit.ui.home.holidays.HolidaysFragment"
        android:label="@string/holidays" />
    <fragment
        android:id="@+id/absencesFragment"
        android:name="es.samiralkalii.myapps.soporteit.ui.home.absences.AbsencesFragment"
        android:label="@string/absences" />
    <fragment
        android:id="@+id/pickUpProfilePhotoBottonSheetDialog"
        android:name="es.samiralkalii.myapps.soporteit.ui.dialog.PickUpProfilePhotoBottonSheetDialog"
        android:label="PickUpProfilePhotoBottonSheetDialog" />
</navigation>