<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="interactor"
            type="es.samiralkalii.myapps.soporteit.ui.logup.LogupViewModelInteractor" />
        <variable
            name="uiModel"
            type="es.samiralkalii.myapps.soporteit.ui.logup.LogupActivityUiModel" />
    </data>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.logup.LogupActivity">

            <es.samiralkalii.myapps.soporteit.ui.util.view.customdrawable.ProfileImage
                android:clickable="false"
                android:id="@+id/card_profile_view"
                app:imageView="@{uiModel.imageProfile.toString()}"
                app:textView='@{""}'
                app:placeholder="@drawable/profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/already_loggedup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="4dp"
                android:text="@string/no_account"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/her"
                app:layout_constraintTop_toBottomOf="@+id/login_button"
                tools:text="@string/no_account" />

            <TextView
                android:id="@+id/her"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="6dp"
                android:onClick="@{()-> interactor.noAcountClick()}"
                android:text="@string/her"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/already_loggedup"
                tools:text="@string/her" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mail_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="8dp"
                app:error="@{uiModel.emailError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_profile_view"
                app:shapeAppearance="@style/rounded_text_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/password"
                    android:text="@={uiModel.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:shapeAppearance="@style/rounded_text_field"
                android:id="@+id/pass_input_layout"
                app:error="@{uiModel.passwordError}"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mail_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={uiModel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{()-> interactor.onLogInClick()}"
                android:enabled="@{uiModel.buttonLoginEnabled}"
                android:text="@string/logIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass_input_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>