<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="es.samiralkalii.myapps.soporteit.ui.register.RegisterViewModel" />

        <variable
            name="activity"
            type="es.samiralkalii.myapps.soporteit.ui.register.RegisterActivity" />
    </data>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.register.RegisterActivity">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/profile"
                app:imgsrc="@{viewModel.imageProfile}"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                android:onClick="@{()-> activity.onImageProfileClick()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/alreadyLoggedUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="4dp"
                android:text="@string/already_logged_up"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/her"
                app:layout_constraintTop_toBottomOf="@+id/button"
                tools:text="@string/already_logged_up" />

            <TextView
                android:id="@+id/her"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:onClick="@{()-> viewModel.onAlreadyLoggedUpClick()}"
                android:text="@string/her"
                android:padding="6dp"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/alreadyLoggedUp"
                tools:text="@string/her" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:shapeAppearance="@style/rounded_text_field"
                android:id="@+id/nameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image"
                app:error="@{viewModel.nameError}" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:nextFocusDown="@+id/email"
                    android:text="@={viewModel.user.name}"
                    android:enabled="@{!viewModel.progressVisible}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:shapeAppearance="@style/rounded_text_field"
                android:id="@+id/mailInputLayout"
                app:error="@{viewModel.emailError}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.user.email}"
                    android:enabled="@{!viewModel.progressVisible}"
                    android:nextFocusDown="@+id/password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:shapeAppearance="@style/rounded_text_field"
                android:id="@+id/passInputLayout"
                app:error="@{viewModel.passwordError}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mailInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:enabled="@{!viewModel.progressVisible}"
                    android:text="@={viewModel.user.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{()-> viewModel.onRegisterClick()}"
                android:text="@string/register"
                android:enabled="@{!viewModel.progressVisible}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passInputLayout" />

            <!--<ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:visible="@{viewModel.progressVisible}"/> -->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>